[package]
name = "brainfuck-benchmark"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"
lazy_static = "1.4.0"
regex = { version = "1.3.1", default-features = false, features = ["std", "unicode"] }
path-dsl = "0.5.4"