[package]
name = "brainfuck-benchmark"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
glob = "0.3.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
indoc = { version = "0.3.4", features = ["unstable"] }
path-dsl = "0.5.4"
regex = { version = "1.3.1", default-features = false, features = ["std", "unicode"] }

# You are meant to just cargo run this, so give us a chance
# Also what is debugging?
[profile.dev]
opt-level = 3
codegen-units = 16
incremental = true
